# lstm-activations-analysis

./: .env.example  .gitignore  README.md  cli.py  config.py  enums.py  pyproject.toml  requirements.txt  settings.py  supporting_functions.py  train_lstm.py
data_helpers/: activations_validation.py  data_mappings.py  roi2network.py
fmri_connectivity_matrices/: fmri_sequence_comparence.py  networks_connectivity.py  networks_correlation.py  roi_connectivity.py
mappings/: data_mappings.py  re_arranging.py
model_training/: cc_utils.py  dataloader.py  fmri_utils.py  hyperparameters.py  inference.py  models.py  torch_utils.py  train_lstm.py
parcellation/: parcellation.py  utils.py
relational_coding/: realtional_coding_activations.py  relational_coding_activations.py  relational_coding_base.py  relational_coding_fmri.py
statistical_analysis/: correlation_by_tr.py  correlation_by_tr_window.py  correlation_pipelines.py  correlation_sequence_comparence.py  cross_corr_clip_rest.py  math_functions.py  matrices_ops.py  table_builder.py
statistics_ops/: correlation_pipelines.py  math_functions.py  table_builder.py
tests/: conftest.py  test_cc_utils.py  test_cli.py  test_config.py  test_data_mappings.py  test_math_functions.py  test_matrices_ops.py  test_re_arranging.py  test_relational_coding_base.py  test_settings.py  test_supporting_functions.py  test_torch_utils.py
visualizations/: inference_results.py  plot_bar.py  plot_figure.py  plot_fmri_signal.py  sub_plot.py
visualiztions/: inference_results.py  plot_bar.py  plot_figure.py  plot_fmri_signal.py  sub_plot.py  (+2 more)
