[project]
name = "lstm-activations-analysis"
version = "0.1.0"
description = "Analysis of fMRI signals processed through RNN/LSTM models: activation extraction, relational coding, and connectivity/correlation statistics."
readme = "README.md"
requires-python = ">=3.10,<3.11"
# Pins mirror the validated environment. requires-python is 3.10 only: torch 1.12
# supports Python up to 3.10, while scipy resolves to a build that needs >= 3.10.
dependencies = [
    "torch~=1.12.0",
    "scikit-learn~=1.1.1",
    "numpy~=1.23.1",
    "pandas~=1.4.3",
    "scipy",
    "matplotlib~=3.5.2",
    "nibabel~=4.0.2",
    "python-dotenv~=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
# Flat script repository (top-level modules, no importable package to build).
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
]
